# tokenxray

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tokenxray
.claude/commands/: checkpoint.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
blog/: i-set-a-10-dollar-ceiling-and-claude-stopped.md  i-spent-104-dollars-in-one-ai-session.md  tokenxray-explained.excalidraw
demo/: demo-session.tape  demo.tape  record.sh  setup_mock.py
src/tokenxray/: __init__.py  __main__.py  cli.py  colors.py  config.py  display.py  parser.py
src/tokenxray/_hook_scripts/: cost_hook.py  resume_hook.py  statusline.py  subagent_hook.py
src/tokenxray/commands/: __init__.py  advisor.py  baseline.py  checkpoint.py  crossmem_impact.py  dashboard.py  diagnose.py  doctor.py  export.py  hook.py  mcp.py  memory_impact.py  overview.py  projects.py  rules.py  session.py
tests/: test_checkpoint.py  test_display.py  test_doctor.py  test_hook_hardstop.py  test_hook_history.py  test_hook_subagent.py  test_imports.py  test_parser.py
